frontend/test/should_fail/keepOneForEach_iterated_accumulation_method_type_mismatch2.grg
test t
{
	iterated it {
	---
		def var i:int;
		def j:Node;
	} \ keepOneForEach<i>Accumulate<j>By<sum>
}
